Fix the text-warning color in the dark mode

--- a/static/css/bootstrap-colors.css
+++ b/static/css/bootstrap-colors.css
@@ -51,6 +51,10 @@
     color: var(--text-success);
 }
 
+.text-warning {
+    color: var(--text-warning);
+}
+
 .text-danger {
     color: var(--text-danger);
 }
